create a plot showing the distribution of post-natal days for each developmental landmark

--- a/p8105_hw4_hj2479.Rmd
+++ b/p8105_hw4_hj2479.Rmd
@@ -15,6 +15,7 @@ library(dplyr)
 library(readxl)
 library(janitor)
 library(ggplot2)
+library(ggridges)
 ```
 
 In Problems 1 and 2, I worked with Chuhan Zhou (UNI: cz2493).
@@ -24,6 +25,8 @@ In Problems 1 and 2, I worked with Chuhan Zhou (UNI: cz2493).
 pups_data = readr::read_csv(file = "./FAS_pups.csv") %>% 
   clean_names() %>% 
   gather(key = pd_outcome, value = days, pd_ears:pd_walk)
-
+ggplot(pups_data,aes(x = days,y = pd_outcome)) + 
+  geom_density_ridges(aes(fill = pd_outcome), scale = .85) + 
+  theme_bw() 
 ```
 
