--- a/p8105_hw4_hj2479.Rmd
+++ b/p8105_hw4_hj2479.Rmd
@@ -19,14 +19,15 @@ library(janitor)
 library(ggplot2)
 library(ggridges)
 ```
-```{r}
+
+```{r, tidy data}
 pups_data = readr::read_csv(file = "./FAS_pups.csv") %>% 
   clean_names() %>% 
   gather(key = pd_outcome, value = days, pd_ears:pd_walk)
 ```
 
 ##part2
-```{r,warning=FALSE}
+```{r, plot, warning=FALSE}
 ggplot(pups_data,aes(x = days,y = pd_outcome)) + 
   geom_density_ridges(aes(fill = pd_outcome), scale = .85) + 
   ggtitle("The Distribution of Post-natal Days \nfor Each Developmental Landmark") +
